# aruna

./: .gitignore  Cargo.toml  README.md  oxlint.config.ts  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
crates/aruna_compiler/: Cargo.toml
crates/aruna_compiler/src/: compiler.rs  config.rs  diagnostics.rs  files.rs  graph.rs  lib.rs  manifest.rs  module_kind.rs  parser.rs  resolver.rs  rules.rs
crates/aruna_compiler/tests/: compiler.rs
crates/aruna_napi/: Cargo.toml
crates/aruna_napi/src/: lib.rs
fixtures/ambiguous-convention-match/expected/: diagnostics.json  manifest.json  modules.json
fixtures/ambiguous-convention-match/input/: aruna.config.ts
fixtures/feature-local-layout/expected/: graph.json  manifest.json  modules.json
fixtures/invalid-client-imports-server/expected/: diagnostics.json  graph.json  manifest.json  modules.json
fixtures/invalid-config/expected/: diagnostics.json  manifest.json
fixtures/invalid-config/input/: aruna.config.ts
fixtures/invalid-server-imports-client/expected/: diagnostics.json  graph.json  manifest.json  modules.json
fixtures/invalid-shared-imports-client/expected/: diagnostics.json  graph.json  manifest.json  modules.json
fixtures/invalid-shared-imports-server/expected/: diagnostics.json  graph.json  manifest.json  modules.json
fixtures/invalid-tsconfig/expected/: diagnostics.json  manifest.json
fixtures/invalid-tsconfig/input/: tsconfig.json
fixtures/missing-tsconfig/expected/: diagnostics.json  manifest.json
fixtures/missing-tsconfig/input/: README.md
scripts/: release.ts
(+33 files in other folders)
